tests/compile-fail/integration__integration__timeline_arg0__reg_as_other_timeline_arg.snap
---
source: tests/integration/timeline_arg0.rs
expression: stderr
---
error: non-constant expression in language without registers
  ┌─ <input>:6:19
  │
6 │     hasMsgArg0(3, $REG[20], 3);
  │                   ^^^^^^^^ non-const expression


